Minor CSS fixes
- Make clickable just the brand area, into the header
- Fix unwanted margin from inline-block in Firefox

--- a/pub/static/themes/whitelabel/_theme.scss
+++ b/pub/static/themes/whitelabel/_theme.scss
@@ -111,7 +111,7 @@ button {
         background: url('binaries/icons/honeybee-logo.png');
         background-repeat: no-repeat;
 
-        display: block;
+        display: inline-block;
         padding-left: 26px + 10px; // logo width + padding
         text-decoration: none;
 
